--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,8 @@ body {
 ul,
 li {
     list-style: none;
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
 
 a {
@@ -34,15 +34,19 @@ h3 {
     margin: 0;
 }
 
+.wrapper {
+    min-height: 100%;
+    overflow: hidden;
+}
+
 .container {
-    max-width: 865px;
+    max-width: 855px;
     margin: 0 auto;
     padding: 0 5px;
 }
 
 .header {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding: 30px 0px;
 }
 
 .header__container {
@@ -53,12 +57,9 @@ h3 {
 
 .nav__list {
     display: flex;
+    font-style: normal;
     font-weight: 500;
     font-size: 20px;
-}
-
-.nav__item {
-    margin-left: 33px;
 }
 
 .about__container {
@@ -66,7 +67,11 @@ h3 {
 }
 
 .about__info {
-    padding-right: 12%;
+    padding-right: 19%;
+}
+
+.about__title {
+    margin-bottom: 40px;
 }
 
 .about__avatar {
@@ -78,7 +83,40 @@ h3 {
 }
 
 .about__img {
-    height: 100%;
     width: 100%;
+    height: 100%;
     object-fit: cover;
+}
+
+.recent-posts {
+    background-color: #EDF7FA;
+    padding: 27px 0px 32px;
+}
+
+.recent-posts__top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 22px;
+}
+
+.recent-posts__articles {
+    display: flex;
+    justify-content: space-between;
+}
+
+.recent-posts__article {
+    background-color: #FFFFFF;
+    box-shadow: 0px 4px 10px rgba(187, 225, 250, 0.25);
+    border-radius: 4px;
+    width: 49%;
+    margin-right: 2%;
+    padding: 30px 48px 35px 23px;
+}
+
+.recent-posts__article:last-child {
+    margin-right: 0;
+}
+
+.separator {
+    margin: 0px 26px;
 }
