--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,52 @@ h3 {
     font-size: 20px;
 }
 
+.header__burger {
+    width: 30px;
+    height: 22px;
+    display: none;
+    align-items: center;
+    margin-right: 18px;
+}
+
+.header__burger-el {
+    height: 2px;
+    width: 100%;
+    background-color: #21243D;
+    position: relative;
+}
+
+.header__burger-el::before,
+.header__burger-el::after {
+    content: "";
+    height: 2px;
+    width: 100%;
+    background-color: #21243D;
+    position: absolute;
+}
+
+.header__burger-el::before {
+    top: -8px;
+}
+
+.header__burger-el::after {
+    top: 8px;
+}
+
+@media (max-width: 480px) {
+    .header {
+        padding-top: 20px;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    .header__burger {
+        display: flex;
+    }
+}
+
 .about__container {
     display: flex;
 }
